...
        case .fat: "Fat"
        case .fiber: "Fiber"
        case .sugar: "Sugars"
        case .saturatedFat: "Saturated fat"
        case .sodium: "Sodium"
        case .potassium: "Potassium"
        case .magnesium: "Magnesium"
        case .iron: "Iron"
        case .calcium: "Calcium"
        case .fluids: "Fluids"
        }
    }
    var unit: String {
...
