...
        (["water", "glass water"],
         Entry(name: "Water", unit: "glass", kcal: 0, carbsG: 0, proteinG: 0, fatG: 0, sodiumMg: 0, fluidsMl: 250)),
        (["electrolytes", "electrolyte tab", "electrolyte tabs", "salt tab", "salt tabs"],
         Entry(name: "Electrolyte Tab", unit: "tab", kcal: 10, carbsG: 2, proteinG: 0, fatG: 0, sodiumMg: 300,
               kMg: 200, mgMg: 60, caMg: 60, sugar: 2, nova: 4)),
        (["banana", "bananas"],
         Entry(name: "Banana", unit: "banana", kcal: 105, carbsG: 27, proteinG: 1, fatG: 0, sodiumMg: 1,
               kMg: 422, mgMg: 32, feMg: 0.3, caMg: 6, fiber: 3, sugar: 14)),                                       // medium
        (["date", "dates"],
         Entry(name: "Dates", unit: "date", kcal: 66, carbsG: 18, proteinG: 0, fatG: 0, sodiumMg: 0,
               kMg: 167, mgMg: 13, feMg: 0.2, caMg: 15, fiber: 2, sugar: 16)),                                      // medjool
        (["chocolate milk"],
         Entry(name: "Chocolate Milk", unit: "cup", kcal: 208, carbsG: 26, proteinG: 8, fatG: 8, sodiumMg: 150,
...
